[patch."https://github.com/Starry-OS/arch_boot.git".arch_boot]
path = "crates/arch_boot"

[patch."https://github.com/Starry-OS/axruntime.git".axruntime]
path = "crates/axruntime"

[profile.dev]
lto = true

[profile.release]
lto = true

[workspace]
members = ["apps/display", "apps/exception", "apps/helloworld", "apps/memtest", "apps/fs/shell", "apps/net/echoserver", "apps/net/httpclient", "apps/net/httpserver", "apps/net/udpserver", "apps/net/bwbench", "apps/task/parallel", "apps/task/sleep", "apps/task/yield", "apps/task/priority", "apps/task/tls", "apps/monolithic_userboot", "tools/axlibc", "apps/scheduler_test"]
resolver = "2"
