[package]
name = "scheduler_test"
version = "0.1.0"
edition = "2021"

[dependencies]
axstd = { git = "https://github.com/Starry-OS/axstd.git", features = ["alloc"] }

task_management = { path = "../../../code/task_management", default-features = false, features = ["smp"] }
spinlock = { path = "../../../code/dependencies/spinlock" }
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
axlog = { git = "https://github.com/Starry-OS/axlog.git" }