[package]
name = "scheduler_test"
version = "0.1.0"
edition = "2021"

[dependencies]
axstd = { git = "https://github.com/Starry-OS/axstd.git", features = ["alloc"] }

task_management = { path = "../../../code/task_management", default-features = false, features = ["smp", "preempt", "irq", "fp_context"] }
trap_handler = { path = "../../../code/trap_handler", default-features = false, features = ["smp", "log", "timer", "preempt", "fp_context"] }
spinlock = { path = "../../../code/dependencies/spinlock" }
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
axlog = { git = "https://github.com/Starry-OS/axlog.git" }

riscv = "0.11"

crate_interface = "0.1.3"